// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - QuoteBubble doesn't show copy to clipboard button when it's disabled 1`] = `
<Wrapper>
  <Quote>
    Hello! I'm Taylor Swift!
  </Quote>
  <SpeechBubble
    variant="speech"
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correct defaults when no props are provieded 1`] = `
<Wrapper>
  <Quote>
    Daily in 5 minutes and I'm still not sure what to say...
  </Quote>
  <SpeechBubble
    variant="speech"
  />
  <CopyButton
    valueToCopy="Daily in 5 minutes and I'm still not sure what to say..."
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correctly thought variant of bubble 1`] = `
<Wrapper>
  <Quote>
    Hello! I'm Taylor Swift!
  </Quote>
  <SpeechBubble
    variant="thought"
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders custom quote 1`] = `
<Wrapper>
  <Quote>
    Hello! I'm Taylor Swift!
  </Quote>
  <SpeechBubble
    variant="speech"
  />
  <CopyButton
    valueToCopy="Hello! I'm Taylor Swift!"
  />
</Wrapper>
`;
